--- a/lib/l10n/app_kn.arb
+++ b/lib/l10n/app_kn.arb
@@ -1,5 +1,4 @@
 {
-  "helloworld"     : "HelloWorld",
   "hello"          : "ನಮಸ್ಕಾರ, ನಾನು ಜುಡಿಕಾ ನಿಮ್ಮ ಕಾನೂನು ಸಹಾಯಕ.",
   "mymission"      : "ಕಾನೂನು ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಎಲ್ಲರಿಗೂ ಅಗತ್ಯವಿರುವ ಬೆಂಬಲ ಸಿಗುವಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನನ್ನ ಧ್ಯೇಯ. ನೀವು ಸಲಹೆ ಪಡೆಯುತ್ತಿರಲಿ, ಜಾಮೀನಿನ ಕುರಿತು ಮಾರ್ಗದರ್ಶನ ಪಡೆಯುತ್ತಿರಲಿ ಅಥವಾ ಕಾನೂನು ನಿಯಮಗಳನ್ನು ತ್ವರಿತವಾಗಿ ಅರ್ಥಮಾಡಿಕೊಳ್ಳುವ ಅಗತ್ಯವಿರಲಿ, ನಾನು ಸಹಾಯ ಮಾಡಲು ಇಲ್ಲಿದ್ದೇನೆ. ”
   "getstarted"     : "ಪ್ರಾರಂಭಿಸಲು ಒತ್ತಿ",
@@ -8,7 +7,7 @@
   "empowering"     : "ತ್ವರಿತ, ವಿಶ್ವಾಸಾರ್ಹ ಕಾನೂನು ಸಂಪನ್ಮೂಲಗಳೊಂದಿಗೆ ವಕೀಲರನ್ನು ಸಬಲೀಕರಣಗೊಳಿಸುವುದು.",
   "iprovide"       : "ಪ್ರಕರಣದ ಉಲ್ಲೇಖಗಳು ಮತ್ತು ಕಾನೂನು ಪೂರ್ವನಿದರ್ಶನಗಳಿಂದ ಹಿಡಿದು ಕಾರ್ಯವಿಧಾನದ ಮಾರ್ಗಸೂಚಿಗಳವರೆಗೆ ಅಗತ್ಯ ಕಾನೂನು ಸಂಪನ್ಮೂಲಗಳಿಗೆ ನಾನು ವಕೀಲರಿಗೆ ತ್ವರಿತ ಮತ್ತು ವಿಶ್ವಾಸಾರ್ಹ ಪ್ರವೇಶವನ್ನು ಒದಗಿಸುತ್ತೇನೆ. ನಿಮ್ಮ ಕೆಲಸವನ್ನು ಸುಗಮಗೊಳಿಸುವುದು ನನ್ನ ಗುರಿಯಾಗಿದೆ, ಇದು ನಿಮ್ಮ ಕಕ್ಷಿದಾರರಿಗೆ ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಬೆಂಬಲ ನೀಡುವತ್ತ ಹೆಚ್ಚು ಗಮನಹರಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ.",
   "streamlining"   : "ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಯೊಂದಿಗೆ ಎಫ್‌ಐಆರ್ ದಾಖಲಾತಿಯನ್ನು ಸುಗಮಗೊಳಿಸುವುದು. ",
-  "iassist"        : "ನಾನು ಪೊಲೀಸ್ ಅಧಿಕಾರಿಗಳಿಗೆ ವೈಯಕ್ತಿಕ ದೂರುಗಳನ್ನು NLP ಬಳಸಿಕೊಂಡು ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಯಾಗಿ ಪರಿವರ್ತಿಸುವ ಮೂಲಕ, ಎಫ್‌ಐಆರ್ ದಾಖಲಾತಿಯನ್ನು ಸರಳೀಕರಿಸಲು ಮತ್ತು ತ್ವರಿತಗೊಳಿಸಲು ಸಂಬಂಧಿತ ಕಾನೂನುಗಳು ಮತ್ತು ವಿಭಾಗಗಳನ್ನು ಗುರುತಿಸುವ ಮೂಲಕ ಸಹಾಯ ಮಾಡುತ್ತೇನೆ. ಇದು ಎಫ್‌ಐಆರ್ ಕಾನೂನು ಮಾನದಂಡಗಳಿಗೆ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸುತ್ತದೆ, ಕಾನೂನು ತಜ್ಞರಿಗೆ ತಕ್ಷಣದ ಪ್ರವೇಶವಿಲ್ಲದಿದ್ದರೂ ಸಹ, ಅಧಿಕಾರಿಗಳು ದೂರುಗಳಿಗೆ ಹೆಚ್ಚು ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಪ್ರತಿಕ್ರಿಯಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ.",
+  "iassist"        : "ನಾನು ಪೊಲೀಸ್ ಅಧಿಕಾರಿಗಳಿಗೆ ವೈಯಕ್ತಿಕ ದೂರುಗಳನ್ನು ಎನ್‌ಎಲ್‌ಪಿ ಬಳಸಿಕೊಂಡು ನಿಖರವಾದ ಕಾನೂನು ಭಾಷೆಯಾಗಿ ಪರಿವರ್ತಿಸುವ ಮೂಲಕ, ಎಫ್‌ಐಆರ್ ದಾಖಲಾತಿಯನ್ನು ಸರಳೀಕರಿಸಲು ಮತ್ತು ತ್ವರಿತಗೊಳಿಸಲು ಸಂಬಂಧಿತ ಕಾನೂನುಗಳು ಮತ್ತು ವಿಭಾಗಗಳನ್ನು ಗುರುತಿಸುವ ಮೂಲಕ ಸಹಾಯ ಮಾಡುತ್ತೇನೆ. ಇದು ಎಫ್‌ಐಆರ್ ಕಾನೂನು ಮಾನದಂಡಗಳಿಗೆ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸುತ್ತದೆ, ಕಾನೂನು ತಜ್ಞರಿಗೆ ತಕ್ಷಣದ ಪ್ರವೇಶವಿಲ್ಲದಿದ್ದರೂ ಸಹ, ಅಧಿಕಾರಿಗಳು ದೂರುಗಳಿಗೆ ಹೆಚ್ಚು ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಪ್ರತಿಕ್ರಿಯಿಸಲು ಅನುವು ಮಾಡಿಕೊಡುತ್ತದೆ.",
   "judica"         : "ಜುಡಿಕಾ",
   "username"       : "ಬಳಕೆದಾರಹೆಸರು",
   "email"          : "ಇಮೇಲ್",
