--- a/lib/l10n/app_kn.arb
+++ b/lib/l10n/app_kn.arb
@@ -1,6 +1,6 @@
 {
   "hello"          : "ನಮಸ್ಕಾರ, ನಾನು ಜುಡಿಕಾ ನಿಮ್ಮ ಕಾನೂನು ಸಹಾಯಕ.",
-  "mymission"      : "ಕಾನೂನು ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಎಲ್ಲರಿಗೂ ಅಗತ್ಯವಿರುವ ಬೆಂಬಲ ಸಿಗುವಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನನ್ನ ಧ್ಯೇಯ. ನೀವು ಸಲಹೆ ಪಡೆಯುತ್ತಿರಲಿ, ಜಾಮೀನಿನ ಕುರಿತು ಮಾರ್ಗದರ್ಶನ ಪಡೆಯುತ್ತಿರಲಿ ಅಥವಾ ಕಾನೂನು ನಿಯಮಗಳನ್ನು ತ್ವರಿತವಾಗಿ ಅರ್ಥಮಾಡಿಕೊಳ್ಳುವ ಅಗತ್ಯವಿರಲಿ, ನಾನು ಸಹಾಯ ಮಾಡಲು ಇಲ್ಲಿದ್ದೇನೆ. ”
+  "mymission"      : "ಕಾನೂನು ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಎಲ್ಲರಿಗೂ ಅಗತ್ಯವಿರುವ ಬೆಂಬಲ ಸಿಗುವಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನನ್ನ ಧ್ಯೇಯ. ನೀವು ಸಲಹೆ ಪಡೆಯುತ್ತಿರಲಿ, ಜಾಮೀನಿನ ಕುರಿತು ಮಾರ್ಗದರ್ಶನ ಪಡೆಯುತ್ತಿರಲಿ ಅಥವಾ ಕಾನೂನು ನಿಯಮಗಳನ್ನು ತ್ವರಿತವಾಗಿ ಅರ್ಥಮಾಡಿಕೊಳ್ಳುವ ಅಗತ್ಯವಿರಲಿ, ನಾನು ಸಹಾಯ ಮಾಡಲು ಇಲ್ಲಿದ್ದೇನೆ.",
   "getstarted"     : "ಪ್ರಾರಂಭಿಸಲು ಒತ್ತಿ",
   "makinglegal"    : "ಕಾನೂನು ಬೆಂಬಲವನ್ನು ಸ್ಪಷ್ಟ ಮತ್ತು ಪ್ರವೇಶಿಸುವಂತೆ ಮಾಡುವುದು.",
   "isimplify"      : "ನಾನು ಸಂಕೀರ್ಣ ಕಾನೂನು ನಿಯಮಗಳು ಮತ್ತು ಪ್ರಕ್ರಿಯೆಗಳನ್ನು ಸರಳಗೊಳಿಸುತ್ತೇನೆ, ನಿಯಮಿತ ಬಳಕೆದಾರರಿಗೆ ಅವರ ಹಕ್ಕುಗಳು ಮತ್ತು ಆಯ್ಕೆಗಳನ್ನು ಅರ್ಥಮಾಡಿಕೊಳ್ಳಲು ಸಹಾಯ ಮಾಡುತ್ತೇನೆ. ಕಾನೂನು ಸಮಸ್ಯೆಯನ್ನು ಎದುರಿಸುತ್ತಿರಲಿ ಅಥವಾ ಜಾಮೀನು ಪ್ರಕ್ರಿಯೆಯನ್ನು ನ್ಯಾವಿಗೇಟ್ ಮಾಡುತ್ತಿರಲಿ, ನಾನು ಸ್ಪಷ್ಟ, ನೇರ ಮಾರ್ಗದರ್ಶನವನ್ನು ನೀಡುತ್ತೇನೆ. ಅವರು ಯಾರೇ ಆಗಿರಲಿ, ಎಲ್ಲರಿಗೂ ವಿಶ್ವಾಸಾರ್ಹ ಕಾನೂನು ಬೆಂಬಲ ಲಭ್ಯವಾಗುವಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನನ್ನ ಗುರಿಯಾಗಿದೆ.",
@@ -20,7 +20,7 @@
   "haveanaccount"  : "ಖಾತೆ ಇದೆಯೇ? ಲಾಗಿನ್ ಮಾಡಿ",
   "forgotpassword" : "ಪಾಸ್ವರ್ಡ್ ಮರೆತಿರಾ",
   "login"          : "ಲಾಗಿನ್ ಮಾಡಿ",
-  "orcontinuewith" : "ಅಥವಾ ಮುಂದುವರಿಸಿ,
+  "orcontinuewith" : "ಅಥವಾ ಮುಂದುವರಿಸಿ",
   "donthaveaccount": "ಖಾತೆ ಇಲ್ಲವೇ? ಸೈನ್ ಅಪ್ ಮಾಡಿ",
   "chatbot"        : "ಚಾಟ್‌ಬಾಟ್",
   "askaquestion"   : "ಪ್ರಶ್ನೆ ಕೇಳಿ",
@@ -39,7 +39,7 @@
   "viewfir"        : "ಎಫ್‌ಐಆರ್ ವೀಕ್ಷಿಸಿ",
   "booknumber"     : "ಪುಸ್ತಕ ಸಂಖ್ಯೆ",
   "formnumber"     : "ಫಾರ್ಮ್ ಸಂಖ್ಯೆ",
-  "policestationame: "ಪೊಲೀಸ್ ಠಾಣೆಯ ಹೆಸರು",
+  "policestationame": "ಪೊಲೀಸ್ ಠಾಣೆಯ ಹೆಸರು",
   "district"       : "ಜಿಲ್ಲೆ",
   "dhoccurrence"   : "ಘಟನೆಯ ದಿನಾಂಕ/ಗಂಟೆ",
   "dhreported"     : "ವರದಿ ಮಾಡಿದ ದಿನಾಂಕ/ಗಂಟೆ",
