--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -1,7 +1,7 @@
 {
 
   "hello"          : "ഹലോ, ഞാൻ നിങ്ങളുടെ ലീഗൽ അസിസ്റ്റന്റ് ജൂഡിക്കയാണ്.",
-  "mymission"      : "നിയമവ്യവസ്ഥയിൽ എല്ലാവർക്കും ആവശ്യമായ പിന്തുണ ലഭിക്കുന്നുണ്ടെന്ന് ഉറപ്പാക്കുക എന്നതാണ് എന്റെ ദൗത്യം. നിങ്ങൾ ഉപദേശം തേടുകയാണെങ്കിലും, ജാമ്യം സംബന്ധിച്ച മാർഗ്ഗനിർദ്ദേശം തേടുകയാണെങ്കിലും, അല്ലെങ്കിൽ നിയമപരമായ നിബന്ധനകളെക്കുറിച്ച് പെട്ടെന്ന് മനസ്സിലാക്കാൻ ആവശ്യമുണ്ടെങ്കിൽ, സഹായിക്കാൻ ഞാൻ ഇവിടെയുണ്ട്."
+  "mymission"      : "നിയമവ്യവസ്ഥയിൽ എല്ലാവർക്കും ആവശ്യമായ പിന്തുണ ലഭിക്കുന്നുണ്ടെന്ന് ഉറപ്പാക്കുക എന്നതാണ് എന്റെ ദൗത്യം. നിങ്ങൾ ഉപദേശം തേടുകയാണെങ്കിലും, ജാമ്യം സംബന്ധിച്ച മാർഗ്ഗനിർദ്ദേശം തേടുകയാണെങ്കിലും, അല്ലെങ്കിൽ നിയമപരമായ നിബന്ധനകളെക്കുറിച്ച് പെട്ടെന്ന് മനസ്സിലാക്കാൻ ആവശ്യമുണ്ടെങ്കിൽ, സഹായിക്കാൻ ഞാൻ ഇവിടെയുണ്ട്.",
   "getstarted"     : "ആരംഭിക്കുക",
   "makinglegal"    : "നിയമ പിന്തുണ നിയമ പിന്തുണ വ്യക്തവും ആക്‌സസ് ചെയ്യാവുന്നതുമാക്കുന്നു.",
   "isimplify"      : "സങ്കീർണ്ണമായ നിയമ നിബന്ധനകളും പ്രക്രിയകളും ഞാൻ ലളിതമാക്കുന്നു, സാധാരണ ഉപയോക്താക്കൾക്ക് അവരുടെ അവകാശങ്ങളും ഓപ്ഷനുകളും മനസ്സിലാക്കാൻ സഹായിക്കുന്നു. നിയമപരമായ പ്രശ്നം നേരിടുന്നതോ ജാമ്യ പ്രക്രിയയിലൂടെ കടന്നുപോകുന്നതോ ആകട്ടെ, ഞാൻ വ്യക്തവും നേരായതുമായ മാർഗ്ഗനിർദ്ദേശം നൽകുന്നു. അവർ ആരായാലും എല്ലാവർക്കും വിശ്വസനീയമായ നിയമ പിന്തുണ ലഭ്യമാകുന്നുവെന്ന് ഉറപ്പാക്കുക എന്നതാണ് എന്റെ ലക്ഷ്യം.",
@@ -39,7 +39,7 @@
   "viewfir"        : "എഫ്‌ഐആർ കാണുക",
   "booknumber"     : "പുസ്തക നമ്പർ",
   "formnumber"     : "ഫോം നമ്പർ",
-  "policestationame: "പോലീസ് സ്റ്റേഷന്റെ പേര്",
+  "policestationame": "പോലീസ് സ്റ്റേഷന്റെ പേര്",
   "district"       : "ജില്ല",
   "dhoccurrence"   : "സംഭവ തീയതി/മണിക്കൂർ",
   "dhreported"     : "റിപ്പോർട്ട് ചെയ്ത തീയതി/മണിക്കൂർ",
@@ -51,12 +51,12 @@
   "dispatchtime"   : "അയയ്ക്കൽ സമയം",
   "bail"           : "ജാമ്യം",
   "statute"        : "നിയമം",
-  "ndps"           : "എൻ‌ഡി‌പി‌എസ്"
-  "scst"           : "എൻ‌ഡി‌പി‌എസ്"
+  "ndps"           : "എൻ‌ഡി‌പി‌എസ്",
+  "scst"           : "എൻ‌ഡി‌പി‌എസ്",
   "pmla"           : "പിഎംഎൽഎ",
   "crpc"           : "സിആർപിസി",
   "ipc"            : "ഐപിസി",
-  "offensecategory": "കുറ്റകൃത്യ വിഭാഗം",,
+  "offensecategory": "കുറ്റകൃത്യ വിഭാഗം",
   "crimeschildren" : "കുട്ടികൾക്കെതിരായ കുറ്റകൃത്യങ്ങൾ",
   "offensestate"   : "രാഷ്ട്രത്തിനെതിരായ കുറ്റകൃത്യം",
   "crimesforeigner": "വിദേശികൾക്കെതിരായ കുറ്റകൃത്യങ്ങൾ",
