--- a/lib/l10n/app_te.arb
+++ b/lib/l10n/app_te.arb
@@ -1,6 +1,6 @@
 {
   "hello"          : "హలో, నేను జుడికా మీ లీగల్ అసిస్టెంట్.",
-  "mymission"      : "న్యాయ వ్యవస్థలో ప్రతి ఒక్కరికి అవసరమైన మద్దతు లభించేలా చూడడమే నా లక్ష్యం. మీరు సలహా కోరినా, బెయిల్‌పై మార్గదర్శకత్వం కోసం చూస్తున్నా లేదా చట్టపరమైన నిబంధనలపై త్వరిత అవగాహన అవసరమైనా, నేను సహాయం చేయడానికి ఇక్కడ ఉన్నాను."
+  "mymission"      : "న్యాయ వ్యవస్థలో ప్రతి ఒక్కరికి అవసరమైన మద్దతు లభించేలా చూడడమే నా లక్ష్యం. మీరు సలహా కోరినా, బెయిల్‌పై మార్గదర్శకత్వం కోసం చూస్తున్నా లేదా చట్టపరమైన నిబంధనలపై త్వరిత అవగాహన అవసరమైనా, నేను సహాయం చేయడానికి ఇక్కడ ఉన్నాను.",
   "getstarted"     : "ప్రారంభించండి",
   "makinglegal"    : "లీగల్ సపోర్ట్ లీగల్ సపోర్టును క్లియర్ మరియు యాక్సెస్బుల్ చేయడం.",
   "isimplify"      : "నేను సంక్లిష్టమైన చట్టపరమైన నిబంధనలు మరియు ప్రక్రియలను సులభతరం చేస్తాను, సాధారణ వినియోగదారులకు వారి హక్కులు మరియు ఎంపికలను అర్థం చేసుకోవడంలో సహాయపడతాను. చట్టపరమైన సమస్యను ఎదుర్కొంటున్నా లేదా బెయిల్ ప్రక్రియను నావిగేట్ చేస్తున్నప్పుడు, నేను స్పష్టమైన, సూటిగా మార్గదర్శకత్వాన్ని అందిస్తాను. ప్రతి ఒక్కరికీ విశ్వసనీయమైన చట్టపరమైన మద్దతు ఉండేలా చూడడమే నా లక్ష్యం. వారు ఎవరో.",
@@ -39,7 +39,7 @@
   "viewfir"        : "ఎఫ్ఐఆర్ చూడండి",
   "booknumber"     : "పుస్తక సంఖ్య",
   "formnumber"     : "ఫారం నంబర్",
-  "policestationame: "పోలీస్ స్టేషన్ పేరు",
+  "policestationame": "పోలీస్ స్టేషన్ పేరు",
   "district"       : "జిల్లా",
   "dhoccurrence"   : "సంభవించిన తేదీ/గంట",
   "dhreported"     : "నివేదించబడిన తేదీ/గంట",
@@ -51,7 +51,7 @@
   "dispatchtime"   : "పంపిణీ సమయం",
   "bail"           : "బెయిల్",
   "statute"        : "శాసనం",
-  "ndps"           : "ఎన్‌డిపిఎస్"
+  "ndps"           : "ఎన్‌డిపిఎస్",
   "scst"           : "ఎస్సీ ఎస్టీ చట్టం",
   "pmla"           : "పిఎంఎల్‌ఎ",
   "crpc"           : "సిఆర్‌పిసి",
