--- a/lib/l10n/app_tn.arb
+++ b/lib/l10n/app_tn.arb
@@ -39,7 +39,7 @@
   "viewfir"        : "காண்க எப்.ஐ.ஆர்.",
   "booknumber"     : "புத்தக எண்",
   "formnumber"     : "படிவ எண்",
-  "policestationame: "காவல் நிலையத்தின் பெயர்",
+  "policestationame": "காவல் நிலையத்தின் பெயர்",
   "district"       : "மாவட்டம்",
   "dhoccurrence"   : "சம்பவம் நடந்த தேதி/மணிநேரம்",
   "dhreported"     : "தெரிவிக்கப்பட்ட தேதி/மணிநேரம்",
