--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -1,6 +1,6 @@
 {
   "hello"          : "नमस्ते, मैं जुडिका आपकी कानूनी सहायक हूं.",
-  "mymission"      : "मेरा मिशन यह सुनिश्चित करना है कि हर किसी को कानूनी प्रणाली में वह सहायता मिले जिसकी उन्हें आवश्यकता है। चाहे आप सलाह मांग रहे हों, जमानत पर मार्गदर्शन की तलाश कर रहे हों, या कानूनी शर्तों की त्वरित समझ की आवश्यकता हो, मैं आपकी मदद के लिए यहाँ हूँ।"
+  "mymission"      : "मेरा मिशन यह सुनिश्चित करना है कि हर किसी को कानूनी प्रणाली में वह सहायता मिले जिसकी उन्हें आवश्यकता है। चाहे आप सलाह मांग रहे हों, जमानत पर मार्गदर्शन की तलाश कर रहे हों, या कानूनी शर्तों की त्वरित समझ की आवश्यकता हो, मैं आपकी मदद के लिए यहाँ हूँ।",
   "getstarted"     : "शुरू हो जाओ",
   "makinglegal"    : "कानूनी सहायता को स्पष्ट एवं सुलभ बनाना।",
   "isimplify"      : "मैं जटिल कानूनी शर्तों और प्रक्रियाओं को सरल बनाता हूँ, जिससे आम उपयोगकर्ताओं को उनके अधिकारों और विकल्पों को समझने में मदद मिलती है। चाहे कोई कानूनी मुद्दा हो या जमानत प्रक्रिया से गुजरना हो, मैं स्पष्ट, सीधा मार्गदर्शन प्रदान करता हूँ। मेरा लक्ष्य यह सुनिश्चित करना है कि हर किसी को विश्वसनीय कानूनी सहायता मिले, चाहे वे कोई भी हों।",
@@ -39,7 +39,7 @@
   "viewfir"        : "एफआईआर देखें",
   "booknumber"     : "पुस्तक संख्या",
   "formnumber"     : "फॉर्म नंबर",
-  "policestationame: "पुलिस स्टेशन का नाम",
+  "policestationame": "पुलिस स्टेशन का नाम",
   "district"       : "ज़िला",
   "dhoccurrence"   : "घटना की तिथि/घंटा",
   "dhreported"     : "रिपोर्ट की गई तारीख/घंटा",
