localization register,profile pages

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,7 +17,7 @@
   "police"         : "Police",
   "advocate"       : "Advocate",
   "register"       : "Register",
-  "haveanaccount"  : "Have an account ? Login",
+  "haveanaccount"  : "Have an account",
   "forgotpassword" : "Forgot Password",
   "login"          : "Login",
   "orcontinuewith" : "Or continue with",
@@ -27,7 +27,7 @@
   "profile"        : "Profile",
   "name"           : "Name",
   "mobilenumber"   : "Mobile Number",
-  "dateofbirth"    : "Date of birth",
+  "dateOfBirth"    : "Date of Birth",
   "notavailable"   : "Not Available",
   "address"        : "Address",
   "logout"         : "Logout",
@@ -79,5 +79,21 @@
   "servedhalfterm" : "Served Half Term",
   "riskscore"      : "Risk Score",
   "penaltySeverity":"Penalty Severity",
-  "submit"         : "Submit"
+  "submit"         : "Submit",
+  "changessaved"   : "Changes saved successfully!",
+  "edittitle"      : "Edit $title",
+  "enternewtitle"  : "Enter new $title",
+  "passworddont"  :"Passwords don't match!",
+  "regsuccess"     :"Registration successful!",
+  "weakPassword"   :"weak-password",
+  "passwordtooweak":"The password provided is too weak.",
+  "emailalreadyinuse": "email-already-in-use",
+  "alreadyexist"   : "The account already exists for that email.",
+  "invalidemail"   :"invalid-email",
+  "notvalid"       :"The email provided is not valid.",
+  "error"          :"An error occurred. Please try again.",
+  "users"          : "users",
+  "role"           : "role",
+  "judica"         :"Judica",
+"selectrole"       :"Select Role"
 }
